# flowcard

./: .pre-commit-config.yaml  pyproject.toml  setup.py
flowcard/: __init__.py  base.py  component.py
