[tool.isort]
profile = "black"

[tool.autoflake]
check = true
ignore-pass-after-docstring = true
in-place = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.pytest.ini_options]
addopts = "--cov=flowcard --cov-report html"
pythonpath = [
  ".", "flowcard"
]

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
